<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="?attr/backgroundColor"
    android:padding="24dp">

    <TextView
        android:id="@+id/tvSignupTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="?attr/textColorPrimary"
        android:layout_marginBottom="36dp" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/username_hint"
        android:padding="12dp"
        android:background="?attr/editTextBackground"
        android:textColor="?attr/editTextColor"
        android:textColorHint="?attr/editTextColorHint"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:background="?attr/editTextBackground"
        android:textColor="?attr/editTextColor"
        android:textColorHint="?attr/editTextColorHint"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="12dp"
        android:background="?attr/editTextBackground"
        android:textColor="?attr/editTextColor"
        android:textColorHint="?attr/editTextColorHint"
        android:layout_marginBottom="24dp" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/signup_button"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="?attr/buttonTextColor"
        android:background="?attr/buttonBackground"
        app:backgroundTint="@null"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp" />

    <TextView
        android:id="@+id/tvAlreadyAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_account"
        android:textColor="?attr/textColorPrimary"
        android:textSize="14sp"
        android:textStyle="normal"
        android:layout_gravity="center"
        android:autoLink="none"
        android:clickable="true" />

</LinearLayout>
